# kissues

./: README.rst  pyproject.toml
kissues/: distinct_letters_count.py  odd_world.py
tests/: test_distinct_letters_count.py  test_kissues.py  test_odd_world.py
