[tool.poetry]
name = "kissues"
version = "0.1.0"
description = ""
authors = ["Alexander Kapustin <dyens@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
